--- a/main.css
+++ b/main.css
@@ -9,3 +9,16 @@
   color: black;
   font-family: 'Georgia'
 }
+
+body { margin: 0; }
+
+canvas {
+	width: 100vw;
+	height: 100vh;
+	display: block;
+	position: fixed;
+	background-color: white;
+	top: 0;
+	left: 0;
+	z-index: -9999;
+}
